Fix overlapping on team tab (#837)

--- a/app/assets/stylesheets/new_design/tasks.scss
+++ b/app/assets/stylesheets/new_design/tasks.scss
@@ -278,6 +278,13 @@
     max-width: 1200px;
   }
 
+  .team-content {
+    margin-top: -100px;
+  }
+
+  ._team-member {
+    margin-top: 100px;
+  }
   ._team-member:hover .member-name a {
     text-decoration: underline;
   }
